--- a/index.qmd
+++ b/index.qmd
@@ -16,13 +16,6 @@ author:
     orcid: 0000-0002-3518-8117
     affiliations: 
       - ref: cbc
-      - id: ul
-        name: Universidade de Lisboa
-        department: Facultade de Letras
-        address: Alameda da Universidade
-        city: Lisboa
-        region: Portugal
-        postal-code: "1600-214"
   - name: Ignacio Castillejo
     orcid: 0000-0001-7445-0416
     affiliations: 
@@ -65,12 +58,12 @@ sidebar: true
 #| echo: false
 # load objects -----------------------------------------------------------------
 targets::tar_config_set(
-    store = here::here("_targets"),
-    script = here::here("_targets.R")
+  store = here::here("_targets"),
+  script = here::here("_targets.R")
 )
 
 yaml_metadata <- rmarkdown::yaml_front_matter(
-    here::here("manuscript", "manuscript.qmd")
+  here::here("manuscript", "manuscript.qmd")
 )
 
 title <- yaml_metadata$title
@@ -96,4 +89,4 @@ library(knitr)
 
 ## Acknowledgements
 
-`r thanks`
+The authors declare no conflicts of interest with regard to the funding source of this study. This study was supported by the Spanish Ministry for Science and Innovation and State Research Agency (Project PID2021- 123416NB-I00 financed by MCIN/ AEI/ 10.13039/501100011033 / FEDER, UE) and the Economic and Social Research Council (ESRC) (ES/S010947/1, UK). GGC was supported by a FPI research contract (PRE2019-088165). DAV was supported by the European Union’s Horizon2020 research and innovation program under Marie Skłodowska–Curie Grant (765556) and partially supported by Portuguese national funds through the Foundation for Science and Technology, under project UIDB/00214/2020, awarded to the Center of Linguistics of the University of Lisbon. IC was supported by the Investigo program funded by the European Union’s NextGenerationEU (NGEU) recovery plan. NSG was supported by an ICREA Academia 2019 award from the Catalan Institution for Research and Advanced Studies (ICREA). We are grateful to Chiara Santolin, Ege E. Özer, and the rest of the Speech Acquisition and Perception research group, and to Alicia Franco-Martínez and Cristina Rodríguez-Prada, for their helpful feedback. We thank Xavier Mayoral, Silvia Blanch, and Cristina Cuadrado for their technical support, and Cristina Dominguez and Katia Pistrin for their efforts in recruiting infants. We also thank all families and infants who participated in the experiments. This study was conducted according to guidelines laid down in the Declaration of Helsinki, and was approved by the Drug Research Ethical Committee (CEIm) of the IMIM Parc de Salut Mar, reference 2020/9080/I. The data and code necessary to reproduce the analyses presented here are publicly accessible, as are the materials necessary to attempt to replicate the findings. The analyses presented here were not preregistered. Data, code, and materials for this research are available at the following URLs: [https://osf.io/hy984/](https://osf.io/hy984/), [https://github.com/gongcastro/cognate-beginnings](https://github.com/gongcastro/cognate-beginnings).
